<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recucler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkbox_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_pressure"
                android:textSize="@dimen/mainTextSize" />

            <CheckBox
                android:id="@+id/checkbox_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_day"
                android:textSize="@dimen/mainTextSize" />

            <CheckBox
                android:id="@+id/checkbox_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_week"
                android:textSize="@dimen/mainTextSize" />

            <CheckBox
                android:id="@+id/checkbox_moon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_moonphase"
                android:textSize="@dimen/mainTextSize" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
